Fix scrollbars

--- a/bcml/assets/src/scss/App.scss
+++ b/bcml/assets/src/scss/App.scss
@@ -22,26 +22,20 @@ $info-dark: #00796b;
 $success: #43a047;
 $success-light: #68b36c;
 $success-dark: #358039;
+$scrollbar-width: 0.5rem;
 
-*::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 3px transparentize($bg2, 0.5);
-    border-radius: 10px;
-    background-color: $bg2;
+::-webkit-scrollbar {
+    width: $scrollbar-width;
 }
-
-*::-webkit-scrollbar {
-    width: 12px;
-    background-color: transparentize(color.scale($bg1, $blackness: 15%), 0.5);
+ 
+::-webkit-scrollbar-track {
+    background: scale-color($fg-dark, $lightness: -10%);
+	border-radius: $scrollbar-width;
 }
-
-*::-webkit-scrollbar-corner {
-    background-color: transparentize(color.scale($bg1, $blackness: 15%), 0.5);
-}
-
-*::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-    background-color: rgba(66, 66, 66, 0.6);
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: $scrollbar-width;
+    background: scale-color($color: $bg-lighter, $lightness: -25%);
 }
 
 html,
@@ -223,26 +217,6 @@ body,
     padding: 0.5rem 1rem;
     white-space: pre;
     width: 100%;
-}
-
-.scroller {
-    &::-webkit-scrollbar {
-        width: 0;
-    }
-
-    &:hover::-webkit-scrollbar {
-        width: 8px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: $fg-dark;
-        border-radius: 16px;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: rgba(200, 200, 200, 0.15);
-        border-radius: 16px;
-    }
 }
 
 .mod-list {
